--- a/index.html
+++ b/index.html
@@ -18,26 +18,134 @@
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-
+        </a>Deselt's (not real name) Portfolio
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
           <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
         </form>
-
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
-        </div>
       </div>
     </div>
   </header>
+  <main id="mainpage" class="container">
+      <div class="row mt-3 p-3 p-md-5 mb-4 text-white rounded bg-dark">
+        <div class="col-md-6">
+          <h1 class="display-4 fst-italic">Welcome to my Portfolio Page!</h1>
+          <p class="lead my-3">Hello there! I am not that comfortable with sharing names, but since you read this far into it, I am Cody.</p>
+        </div>
+        <div class="col-md-6">
+          <img src="Hero.JPG" alt="" class="d-block mx-lg-auto img-fluid">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-8">
+          <h3 class="pb-4 mb-4 fst-italic border-bottom">Content Space</h3>
+          <article class="blog-post">
+            <h2 class="blog-post-title">Content Space</h2>
+            <p class="blog-post-meta"></p>
+            <p></p>
+          </article>
+        </div>
+        <div class="col-md-4">
+          <div class="p-4 mb-3 bg-light rounded">
+            <h4 class="fst-italic">Content Space</h4>
+            <p class="mb-0"></p>
+          </div>
+          <div class="p-4">
+            <h4 class="fst-italic">Content Space</h4>
+            <ol class="list-unstyled">
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Project Page -->
+    <div id="projectpage" class="container">
+      <div class="row mb-2">
+        
+        <!-- Project 2 -->
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Module 1</strong>
+              <h3 class="mb-0">Wikipedia Page</h3>
+              <p class="card-text mb-auto">I made a Wikipedia-style page about a game which I used to like, but now, hate. It is on the more embarassing side of projects, so go look at the other projects. If you still want, you can go and click the link, but I will not be held responsible if it, which is, is bad</p>
+              <a href="https://arsenalthing.deselt2.repl.co/" class="stretched-link">Go to the page</a>
+            </div>
+          </div>
+        </div>
+        <!-- Project 3 -->
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Module 2</strong>
+              <h3 class="mb-0">Javascript DJ</h3>
+              <p class="card-text mb-auto">This project is much better than the previous, but it is still not that impressive. I could say that this won't make me die of embarassment, so, you can go to the page without anything bad.</p>
+              <a href="https://music-thing.deselt2.repl.co/" class="stretched-link">Go to page</a>
+            </div>
+          </div>
+        </div>
+        <!-- Project 4 -->
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Module 2</strong>
+              <h3 class="mb-0">Story</h3>
+              <p class="card-text mb-auto">This project is a story about surviving a shipwreck, but due to time constraints, it ended up!</p>
+              <a href="#" class="stretched-link">Go to page</a>
+            </div>
+          </div>
+        </div>
+        <!-- Project 5 -->
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Module 2</strong>
+              <h3 class="mb-0">Idol Resume</h3>
+              <p class="card-text mb-auto">This a webpage about Mahatma Gandhi's Resume I put together through research.</p>
+              <a href="#" class="stretched-link">Go to page</a>
+            </div>
+          </div>
+        </div>
+        <!-- Project 6 -->
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Module 3</strong>
+              <h3 class="mb-0">Phaser Game</h3>
+              <p class="card-text mb-auto">This is a platformer game I made with the Phaser JS library.</p>
+              <a href="#" class="stretched-link">Go to page</a>
+            </div>
+          </div>
+        </div>
+        <!-- Project 7 -->
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Module 3</strong>
+              <h3 class="mb-0">Choropleth Map</h3>
+              <p class="card-text mb-auto">This is a Choropleth Map of Singapore residents based on 7 areas.</p>
+              <a href="#" class="stretched-link">Go to page</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Journal Page -->
+    <div id="journalpage">
+      <iframe class="airtable-embed" src="https://airtable.com/embed/shrYGpGsIFsXa3I4I?backgroundColor=red" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    </div>
+    
+    <script src="script.js"></script>
+  </body>
+</html>
 </body>
 </html>
