--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Module 2</strong>
               <h3 class="mb-0">Story</h3>
-              <p class="card-text mb-auto">This project is a story about surviving a shipwreck, but due to time constraints, it ended up!</p>
+              <p class="card-text mb-auto">This project is a story about surviving a shipwreck, but due to time constraints, it ended up being insanely short.</p>
               <a href="#" class="stretched-link">Go to page</a>
             </div>
           </div>
