made more stuff

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Module 3</strong>
               <h3 class="mb-0">Phaser Game</h3>
-              <p class="card-text mb-auto">This is a platformer game I made with the Phaser JS library.</p>
+              <p class="card-text mb-auto">This Phaser project is my most favourite project out of every other project I have. It's relatively simple, but fun.</p>
               <a href="#" class="stretched-link">Go to page</a>
             </div>
           </div>
@@ -130,9 +130,19 @@
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Module 3</strong>
-              <h3 class="mb-0">Choropleth Map</h3>
-              <p class="card-text mb-auto">This is a Choropleth Map of Singapore residents based on 7 areas.</p>
-              <a href="#" class="stretched-link">Go to page</a>
+              <h3 class="mb-0">Choropleth Map (Singapore)</h3>
+              <p class="card-text mb-auto">This is a Choropleth map on Singapore on 7 different areas. However, a bug occured which caused the map to be inaccurate.</p>
+              <a href="https://dataviz-d5-starter2.deselt2.repl.co" class="stretched-link">Go to Singapore page</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Module 3</strong>
+              <h3 class="mb-0">Choropleth Maps</h3>
+              <p class="card-text mb-auto">This is similar to Singapore</p>
+              <a href="https://dataviz-challenge-starter-1.deselt2.repl.co" class="stretched-link">Go to Japan page</a>
             </div>
           </div>
         </div>
