--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
         </ul>
-
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-        </form>
       </div>
     </div>
   </header>
@@ -40,28 +36,7 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-md-8">
-          <h3 class="pb-4 mb-4 fst-italic border-bottom">Content Space</h3>
-          <article class="blog-post">
-            <h2 class="blog-post-title">Content Space</h2>
-            <p class="blog-post-meta"></p>
-            <p></p>
-          </article>
-        </div>
-        <div class="col-md-4">
-          <div class="p-4 mb-3 bg-light rounded">
-            <h4 class="fst-italic">Content Space</h4>
-            <p class="mb-0"></p>
-          </div>
-          <div class="p-4">
-            <h4 class="fst-italic">Content Space</h4>
-            <ol class="list-unstyled">
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-            </ol>
-          </div>
+      
         </div>
       </div>
     </main>
@@ -99,7 +74,7 @@
               <strong class="d-inline-block mb-2 text-primary">Module 2</strong>
               <h3 class="mb-0">Story</h3>
               <p class="card-text mb-auto">This project is a story about surviving a shipwreck, but due to time constraints, it ended up being insanely short.</p>
-              <a href="#" class="stretched-link">Go to page</a>
+              <a href="https://Story.deselt2.repl.co" class="stretched-link">Go to page</a>
             </div>
           </div>
         </div>
@@ -108,9 +83,9 @@
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Module 2</strong>
-              <h3 class="mb-0">Idol Resume</h3>
+              <h3 class="mb-0">Gandhi Resume</h3>
               <p class="card-text mb-auto">This a webpage about Mahatma Gandhi's Resume I put together through research.</p>
-              <a href="#" class="stretched-link">Go to page</a>
+              <a href="https://Gandhi-Resume.deselt2.repl.co" class="stretched-link">Go to page</a>
             </div>
           </div>
         </div>
@@ -121,7 +96,7 @@
               <strong class="d-inline-block mb-2 text-primary">Module 3</strong>
               <h3 class="mb-0">Phaser Game</h3>
               <p class="card-text mb-auto">This Phaser project is my most favourite project out of every other project I have. It's relatively simple, but fun.</p>
-              <a href="#" class="stretched-link">Go to page</a>
+              <a href="https://Phaser-Game.deselt2.repl.co" class="stretched-link">Go to page</a>
             </div>
           </div>
         </div>
@@ -140,8 +115,8 @@
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Module 3</strong>
-              <h3 class="mb-0">Choropleth Maps</h3>
-              <p class="card-text mb-auto">This is similar to Singapore</p>
+              <h3 class="mb-0">Choropleth Map (Japan)</h3>
+              <p class="card-text mb-auto">This is similar to Singapore's Choropleth Map but instead of the map displaying the incorrect information, it is somewhat accurate.</p>
               <a href="https://dataviz-challenge-starter-1.deselt2.repl.co" class="stretched-link">Go to Japan page</a>
             </div>
           </div>
